# PredictStarNumber

./: .gitignore  Procfile  README.md  apps.py  main.py  pyproject.toml  requirements.txt  web.py
static/js/: update.js
templates/: index.html
