[project]
name = "predictstarnumber"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask-cors==4.0.0",
    "flask-restx==1.3.0",
    "gunicorn==22.0.0",
    "pandas==2.2.2",
    "requests==2.31.0",
    "scikit-learn==1.4.2",
]
